Fixed form alignment.

--- a/couch-fashion/src/stylesheets/style.css
+++ b/couch-fashion/src/stylesheets/style.css
@@ -66,37 +66,48 @@
     font-weight: bold;
     color: white;
 }
+
 .lorem {
     color: white;
     font-size: 20px;
     margin-top: 36px;
-    margin-bottom: 60px;
+    margin-bottom: 80px;
 }
+
 .request-quote-heading {
     font-weight: bold;
-    padding-top: 30px;
-    padding-bottom: 15px;
+    padding-top: 20px;
+    padding-bottom: 5px;
 }
+
 .white {
     background-color: white;
     border-radius: 5px;
+    box-shadow: 0px 5px 15px 10px;
 }
+
 .form-group {
-    padding-left: 20px;
-    padding-right: 20px;
+    padding-left: 10px;
+    padding-right: 10px;
     padding-top: 7px;
 }
+
 .white-form {
-    margin-top: 10px;
+    margin-top: -420px;
+    position: relative;
+    margin-right: 10%;
+    width: 33%;
 }
+
 .checkbox label {
     font-size: 18px;
 }
-.form-control{
+
+.form-control {
     background-color: #F0EBEB;
     font-size: 15px;
-    padding-top: 30px;
-    padding-bottom: 30px;
+    padding-top: 20px;
+    padding-bottom: 25px;
 }
 
 .btn-crimson {
@@ -107,6 +118,10 @@
     padding-top: 15px;
     padding-bottom: 45px;
 }
+
 .btn-crimson:hover {
     color: white;
+}
+.checkbox-form {
+    margin-top: -5px;
 }
